3-apps/maliev-quote-engine/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maliev-quote-engine-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - quote-staging.maliev.com
      secretName: maliev-com-wildcard-tls
  rules:
    - host: quote-staging.maliev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maliev-quote-engine
                port:
                  number: 8080
